# bible-api

./: -  .editorconfig  .env.example  .env.postgres-local.example  .gitattributes  .gitignore  .pre-commit-config.yaml  API_TESTING_BEST_PRACTICES.md  BIBLE_API_BASE_PROJECT.py  CLAUDE.md  COMMENTS_REVIEW.md  DEV_FLOW_PLAYBOOK.md  Dockerfile  GEMINI.md  Makefile  PR_T-014.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  schema.yml  schema_check.yml  sonar-project.properties  temp_issue_content.md
.github/: branch-protection.json  copilot-instructions.md
.github/workflows/: ci.yml
bible/: apps.py  serializers.py  shared_serializers.py  urls.py  utils.py  views.py
bible/ai/: embedding_cache.py  hybrid.py  mmr.py  models.py  query_expansion.py  reranking.py  retrieval.py  serializers.py  services.py  urls.py  views.py
bible/auth/: apps.py  authentication.py  openapi.py  permissions.py  serializers.py  urls.py  views.py
bible/books/: __init__.py  filters.py  serializers.py  serializers_frontend.py  urls.py  views.py
bible/commentaries/: __init__.py  apps.py  models.py
bible/comments/: serializers.py  urls.py  views.py
bible/crossrefs/: __init__.py  serializers.py  urls.py  views.py
bible/entities/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
bible/images/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
bible/integration/: apps.py  models.py
bible/languages/: urls.py  views.py
bible/migrations/: 0000_enable_pgvector.py  0001_initial.py  0002_theme_crossreference_and_more.py  0003_remove_theme_color_remove_theme_icon_versetheme_and_more.py  0004_verse_themes.py  0005_add_blueprint_models.py  0006_recreate_crossreferences.py  0007_remove_crossreference_cr_confidence_0_1_and_more.py  0008_canonicalbook_context_data_and_more.py  0009_commentarysource_commentaryentry_versecomment_and_more.py  0010_author.py  0011_create_verse_embeddings.py  0012_vector_indexes.py  0013_set_vector_dimensions.py  0014_alter_bookname_abbreviation_and_more.py  0015_unifiedverseembedding_unifiedthemeembedding.py  0016_alter_testament_options_testament_abbreviation_and_more.py  0017_rename_commentary__languag_ea0093_idx_cs_lang_active_idx_and_more.py  0018_remove_commentaryentry_uniq_commentary_source_ref_and_more.py  0019_add_query_expansion_cache.py  0020_add_query_nlp_cache.py  0021_crossref_and_topics_enriched.py  0022_initial_models.py
bible/models/: __init__.py  auth.py  books.py  comments.py  crossrefs.py  nlp_cache.py  query_expansion.py  rag.py  themes.py  topics.py  verses.py  versions.py
bible/people/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
bible/rag/: urls.py  views.py
bible/references/: __init__.py  serializers.py  services.py  urls.py  views.py
bible/services/: gazetteer_processor.py
common/: apps.py  data_config.py  data_core.py  exceptions.py  logging.py  middleware.py  mixins.py  openapi.py  pagination.py
config/: asgi.py  settings.py  urls.py  wsgi.py
data/: 00_DATA_POPULATION_PLAN.md  DATABASE_POPULATION_GUIDE.md  README.md  __init__.py  apps.py
docs/: API_STANDARDS.md  GITHUB_INTEGRATION.md  README.md  REPOSITORY_SETUP.md  openapi-v1.yaml
fixtures/: themes_basic.json
prometheus/: prometheus.yml
scripts/: run_hybrid_benchmark.py  setup-repo.ps1  setup-repo.sh  setup.sh  wait-for-it.sh
tasks/: 2025-09-06--api--django-project-setup.md  2025-09-06--infra--dev-environment-setup.md  INDEX.md  README.md
tests/: README.md  conftest.py  test_bible_utils_final.py  test_bible_views_coverage.py  test_quick_coverage_boost.py
(+300 files in other folders)
